# apple-smi

./: LICENSE  README.md  pyproject.toml
apple_smi/: __init__.py  cfutils.py  cli.py  formatter.py  iokit.py  ioreport.py  memory.py  powermetrics.py  processes.py  sampler.py  sensors.py  soc_info.py
scripts/: publish.sh
tests/: test_formatter.py  test_soc_info.py
